# wedx-chat-completion

./: LICENSE  README.md
backend/: .dockerignore  .env.sample  .gitignore  README.md  ai_service.py  alembic.ini  conftest.py  kernel_manager.py  log_conf.yaml  main.py  plugin_manager.py  pyproject.toml  semantic_kernel_setup.py  telemetry_config.py
backend/alembic/: env.py
backend/alembic/versions/: 20250905_0322_squashed_base.py
backend/features/: __init__.py
backend/features/administration/: __init__.py
backend/features/administration/routers/: __init__.py  tenants.py  users.py
backend/features/administration/schemas/: __init__.py  tenants.py  users.py
backend/features/ai/: __init__.py
backend/features/ai/routers/: chat.py
backend/features/ai/schemas/: __init__.py  chat.py
backend/features/dashboard/: __init__.py
backend/features/dashboard/routers/: __init__.py  kernel.py
backend/features/data_management/: __init__.py
backend/features/data_management/routers/: __init__.py  audience.py  domain.py  environment.py  organization.py  settings.py  shared.py
backend/features/data_management/schemas/: __init__.py  master_data.py  settings.py
backend/features/observability/routers/: logs.py  metrics.py  overview.py  traces.py
backend/features/playground/: __init__.py
backend/features/playground/routers/: playground.py
backend/features/playground/schemas/: __init__.py  chat.py  chat_sessions.py
backend/shared/: __init__.py
backend/shared/auth/: __init__.py  auth.py  user_manager.py
backend/shared/database/: __init__.py  database.py
backend/shared/models/: __init__.py  models.py
backend/shared/utils/: __init__.py  common.py  custom_logging.py
backend/tests/: test_auth.py  test_database.py  test_main.py  test_models.py
docker/: Dockerfile
frontend/: .dockerignore  .env.sample  README.md  biome.json  components.json  dev-full.mjs  eslint.config.js  index.html  make-build-info.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
frontend/public/: build-info.json
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/config/: auth-config.ts
frontend/src/features/administration/: index.ts
frontend/src/features/administration/components/: index.ts  tenants-tab.tsx  user-edit-dialog.tsx  users-tab.tsx
frontend/src/features/administration/pages/: dashboard-page.tsx  index.ts  tenants-page.tsx  users-page.tsx
frontend/src/features/administration/types/: index.ts
frontend/src/features/dashboard/: index.ts
frontend/src/features/dashboard/components/: dashboard-kernel.tsx  index.ts
frontend/src/features/dashboard/pages/: dashboard-page.tsx
frontend/src/features/dashboard/types/: index.ts
frontend/src/features/data-management/: index.ts
frontend/src/features/data-management/components/: data-table.tsx  index.ts  master-data-form-dialog.tsx  settings-data-table.tsx  (+1 more)
frontend/src/features/observability/: index.ts
frontend/src/features/playground/: index.ts
frontend/src/shared/: index.ts
frontend/src/shared/components/: index.ts  json-editor-monaco.tsx  json-editor.tsx  login-page.test.tsx  login-page.tsx  markdown-content.tsx
frontend/src/shared/contexts/: auth-context.tsx  index.ts
frontend/src/shared/hooks/: index.ts  use-chat-sessions.ts  use-master-table.ts  use-settings-resolver.ts
frontend/src/shared/types/: index.ts
frontend/src/shared/utils/: api.test.ts  api.ts
frontend/src/test/: setup.ts  utils.tsx
frontend/src/test/mocks/: handlers.ts
(+43 files in other folders)
